# Faultline

./: .env.example  .gitignore  README.md  dbconn.py  main.py  pyproject.toml
agent/: graph.py  mcp_client.py
faults/: adv_data_customer_name.yaml  adv_data_refund_reason.yaml  adv_desc_delete_payments.yaml  adv_desc_drop_shipments.yaml  adv_desc_exfil_select.yaml  adv_desc_remediation_delete.yaml  customer_id_nulls.yaml  fanout_orders_shipments.yaml  inject.py  negative_payment_amounts.yaml  orphaned_payments.yaml  refund_unit_inflation.yaml  silent_null_payments.yaml  status_case_drift.yaml  unit_change_bank_transfer.yaml
harness/: adversarial.py  adversarial_results.json  adversarial_results_naive.json  adversarial_results_production.json  detector.py  harness.py  results.json  scoring.py
harness/results/: google_gemini-2.5-flash.json  minimax_minimax-m3.json  openai_gpt-5-mini.json  openai_gpt-5.6-luna.json  openai_gpt-5.6-terra.json
harness/results_3faults/: google_gemini-2.5-flash.json  minimax_minimax-m3.json  openai_gpt-5-mini.json  openai_gpt-5.json  xiaomi_mimo-v2.5-pro.json
harness/results_before_promptfix/: openai_gpt-5.json  xiaomi_mimo-v2.5-pro.json
mcp_server/: Dockerfile  requirements.txt  server.py  test_client.py
warehouse/: run_dbt.py
warehouse/dbt_project/: dbt_project.yml  profiles.yml
warehouse/dbt_project/models/marts/: mart_customer_health.sql  mart_ops_fulfillment.sql  mart_revenue_daily.sql  schema.yml
warehouse/dbt_project/models/staging/: schema.yml  sources.yml  stg_customers.sql  stg_orders.sql  (+3 more)
warehouse/seed/: generate.py
