[project]
name = "faultline"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dbt-postgres>=1.10.2",
    "fastmcp>=3.4.4",
    "langchain>=1.3.13",
    "langchain-mcp-adapters>=0.3.0",
    "langchain-openai>=1.3.5",
    "langgraph>=1.2.9",
    "langsmith>=0.10.4",
    "mcp>=1.28.1",
    "psycopg2-binary>=2.9.12",
    "python-dotenv>=1.2.2",
    "pyyaml>=6.0.3",
]
